@startuml er-diagram
' ============================================
' ER Diagram - TravelSplit
' Generated by: ER Data Architect Agent
' Mode: EXTRACTION (from TypeORM entities)
' Source: Backend/src/modules/*/entities/*.entity.ts
' Generated: 2026-01-15
' ============================================
' Stack: TypeScript + NestJS v11 + TypeORM v0.3.28 + PostgreSQL
' Normalization Level: 3NF
' ============================================

!define TABLE(name) entity name << (T,#FFAAAA) >>
!define PK(x) <b><u>x</u></b>
!define FK(x) <i>x</i>
!define UK(x) <u>x</u>

' ============================================
' BASE ENTITY (Abstract - inherited by all)
' Provides: id, created_at, updated_at, deleted_at
' ============================================

' ============================================
' ENTITIES - Currently Implemented
' ============================================

TABLE(users) {
  PK(id) : UUID
  nombre : VARCHAR(255)
  UK(email) : VARCHAR(255)
  password_hash : VARCHAR(255)
  --
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}
note right of users
  <b>Constraints:</b>
  - email: UNIQUE, INDEX
  - Extends BaseEntity
  <b>Source:</b>
  user.entity.ts
end note

TABLE(trips) {
  PK(id) : UUID
  name : VARCHAR(255)
  currency : VARCHAR(3)
  status : VARCHAR(20)
  UK(code) : VARCHAR(20)
  --
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}
note right of trips
  <b>Constraints:</b>
  - code: UNIQUE
  - currency DEFAULT 'COP'
  - status DEFAULT 'ACTIVE'
  <b>Enum TripStatus:</b>
  ACTIVE, COMPLETED, CANCELLED
  <b>Source:</b>
  trip.entity.ts
end note

TABLE(trip_participants) {
  PK(id) : UUID
  FK(trip_id) : UUID
  FK(user_id) : UUID
  role : VARCHAR(20)
  --
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}
note right of trip_participants
  <b>Constraints:</b>
  - UNIQUE(trip_id, user_id)
  - trip_id: INDEX
  - user_id: INDEX
  - role DEFAULT 'MEMBER'
  <b>Enum ParticipantRole:</b>
  CREATOR, MEMBER
  <b>Junction Table:</b>
  Resolves User <-> Trip M:N
  <b>Source:</b>
  trip-participant.entity.ts
end note

' ============================================
' ENTITIES - Planned (from PRD/modeloER.md)
' Not yet implemented in code
' ============================================

TABLE(expense_categories) {
  PK(id) : INTEGER
  UK(name) : VARCHAR(50)
  icon : VARCHAR(50)
  is_active : BOOLEAN
}
note right of expense_categories
  <b>Status:</b> NOT IMPLEMENTED
  <b>Type:</b> Lookup Table
  <b>Values:</b>
  Comida, Transporte,
  Alojamiento, Entretenimiento,
  Varios
end note

TABLE(expenses) {
  PK(id) : UUID
  FK(trip_id) : UUID
  FK(payer_id) : UUID
  FK(category_id) : INTEGER
  title : VARCHAR(255)
  amount : DECIMAL(12,2)
  receipt_url : VARCHAR(500)
  expense_date : DATE
  --
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}
note right of expenses
  <b>Status:</b> NOT IMPLEMENTED
  <b>Business Rules:</b>
  - amount in COP only
  - receipt_url: optional
  - Only CREATOR can edit
end note

TABLE(expense_splits) {
  PK(id) : UUID
  FK(expense_id) : UUID
  FK(user_id) : UUID
  amount_owed : DECIMAL(12,2)
  --
  created_at : TIMESTAMP
}
note right of expense_splits
  <b>Status:</b> NOT IMPLEMENTED
  <b>Junction Table:</b>
  Expense <-> User (beneficiaries)
  <b>Purpose:</b>
  Fair share calculation
end note

' ============================================
' RELATIONSHIPS - Currently Implemented
' ============================================

' User participates in Trip through TripParticipant (M:N)
users ||--o{ trip_participants : "participates"
trips ||--|{ trip_participants : "has"

' ============================================
' RELATIONSHIPS - Planned (not implemented)
' ============================================

' Trip contains Expenses (1:N)
trips ||--o{ expenses : "contains"

' User pays Expense (1:N)
users ||--o{ expenses : "pays"

' Category classifies Expense (1:N)
expense_categories ||--o{ expenses : "categorizes"

' Expense split among Users (1:N from Expense)
expenses ||--|{ expense_splits : "divided into"

' User owes in ExpenseSplit (1:N)
users ||--o{ expense_splits : "owes"

@enduml
